Fixed problem with getting words from messages. Return key now only drops new line if shift key is down.

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -17,6 +17,17 @@ td
     vertical-align: top;
 }
 
+a
+{
+    color: black;
+    text-decoration: none;
+}
+a:active
+{
+    color: black;
+    text-decoration: none;
+}
+
 .max-width
 {
     width: 100%;
@@ -59,11 +70,19 @@ td
 
 .block
 {
+    max-width: 20vw;
     vertical-align: bottom;
     float: left;
     padding: 30px;
     
     font-size: 24px;
+    opacity: 0.9;
+    
+    overflow: hidden;
+}
+.block:hover
+{
+    opacity: 1;
 }
 
 .canvas-button
